--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </div>
   </div>
 
-  <div class="new-obj stat">
-    <div class="container new-obj--bc">
-      <div class="new-obj--blur"></div>
+<!--  <div class="new-obj stat">
+    <div class="container new-obj&#45;&#45;bc">
+      <div class="new-obj&#45;&#45;blur"></div>
       <div class="row">
         <div class="poster col-md-4"><img src="img/leio-mclaren-307277.jpg" alt="">
         </div>
@@ -109,14 +109,14 @@
           </div>
           <div class="desc__details">
             <div class="row">
-              <div class="col-4 desc__details--item">COUNTRY</div>
-              <div class="col-8 desc__details--item">1212</div>
-              <div class="col-4 desc__details--item">YEAR</div>
-              <div class="col-8 desc__details--item">1212</div>
-              <div class="col-4 desc__details--item">GENRE</div>
-              <div class="col-8 desc__details--item">1212</div>
-              <div class="col-4 desc__details--item">ACTORS</div>
-              <div class="col-8 desc__details--item">Lorem ipsum dolor sit amet,
+              <div class="col-4 desc__details&#45;&#45;item">COUNTRY</div>
+              <div class="col-8 desc__details&#45;&#45;item">1212</div>
+              <div class="col-4 desc__details&#45;&#45;item">YEAR</div>
+              <div class="col-8 desc__details&#45;&#45;item">1212</div>
+              <div class="col-4 desc__details&#45;&#45;item">GENRE</div>
+              <div class="col-8 desc__details&#45;&#45;item">1212</div>
+              <div class="col-4 desc__details&#45;&#45;item">ACTORS</div>
+              <div class="col-8 desc__details&#45;&#45;item">Lorem ipsum dolor sit amet,
                 consectetur adipisicing elit. Dicta est
                 exercitationem nisi obcaecati rerum velit.
               </div>
@@ -124,8 +124,8 @@
           </div>
           <div class="control">
             <div class="row">
-              <div class="col-3"><a href="" class="btn btn--red js-delete">Delete</a></div>
-              <div class="col-3"><a href="" class="btn btn--blue js-edit">Edit</a></div>
+              <div class="col-10 col-sm-5 "><a href="" class="btn btn&#45;&#45;red js-delete">Delete</a></div>
+              <div class="col-10 col-sm-5"><a href="" class="btn btn&#45;&#45;blue js-edit">Edit</a></div>
             </div>
           </div>
         </div>
@@ -143,13 +143,13 @@
 
       </div>
       <form>
-        <textarea class="comment--place" name="comment" placeholder="Add your comment" id="" cols="10" rows="1"></textarea>
+        <textarea class="comment&#45;&#45;place" name="comment" placeholder="Add your comment" id="" cols="10" rows="1"></textarea>
         <div class="form-block__btn-wrap">
-          <a class="btn btn--blue text-white js-add-comment">Add</a>
+          <a class="btn btn&#45;&#45;blue text-white js-add-comment">Add</a>
         </div>
       </form>
     </div>
-  </div>
+  </div>-->
 </main><!-- MAIN CONTENT [END] -->
 
 
@@ -165,7 +165,7 @@
 		<div class="container new-obj--bc">
 			<div class="new-obj--blur js-back-pic"></div>
 			<div class="row">
-				<div class="poster col-md-4 js-poster"><img src="" alt="">
+				<div class="poster col-md-4 js-poster text-center"><img src="" alt="">
 				</div>
 				<div class="desc col-md-8 text-white ">
 					<h2></h2>
@@ -186,8 +186,8 @@
 					</div>
 					<div class="control">
 						<div class="row">
-							<div class="col-3"><a href="" class="btn btn--red js-delete">Delete</a></div>
-							<div class="col-3"><a href="" class="btn btn--blue js-edit">Edit</a></div>
+							<div class="col-6 col-sm-5 col-lg-3"><a href="" class="btn btn--red js-delete">Delete</a></div>
+							<div class="col-6 col-sm-5 col-lg-3"><a href="" class="btn btn--blue js-edit">Edit</a></div>
 						</div>
 					</div>
 				</div>
